test.h

typedef long __fd_mask;
typedef struct fd_set {
  __fd_mask __fds_bits[16];
} fd_set;
typedef long __time_t;
typedef long __suseconds_t;
typedef struct timeval {
  __time_t tv_sec;
  __suseconds_t tv_usec;
} timeval;
typedef long __syscall_slong_t;
typedef struct timespec {
  __time_t tv_sec;
  __syscall_slong_t tv_nsec;
} timespec;
typedef struct __sigset_t {
  unsigned long __val[16];
} __sigset_t;
typedef unsigned int __socklen_t;
typedef long __off_t;
typedef long __off64_t;
typedef long __ssize_t;
typedef unsigned int __uint32_t;
typedef unsigned long __dev_t;
typedef unsigned long __ino_t;
typedef unsigned long __nlink_t;
typedef unsigned int __mode_t;
typedef unsigned int __uid_t;
typedef unsigned int __gid_t;
typedef long __blksize_t;
typedef long __blkcnt_t;
typedef __time_t time_t;
typedef __off_t off_t;
typedef unsigned char __u_char;
extern int select(int __nfds, struct fd_set *__readfds,
                  struct fd_set *__writefds, struct fd_set *__exceptfds,
                  struct timeval *__timeout);
extern int pselect(int __nfds, struct fd_set *__readfds,
                   struct fd_set *__writefds, struct fd_set *__exceptfds,
                   const struct timespec *__timeout,
                   const struct __sigset_t *__sigmask);